[style]: Fixed overlapping glitches with the menu in the chatbox component

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -157,7 +157,7 @@ a:hover{
     background-color: var(--primary-bg);
     border: 1px solid var(--ash);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 10;
+    z-index: 1000;
     display: flex;
     flex-direction: column;
 }
@@ -520,7 +520,7 @@ a.submenu-trigger {
     display: flex;
     flex-direction: column;
     text-align: left;
-    z-index: 10;
+    z-index: 100;
     padding:  0 0;
     background-color: var(--black);
     box-shadow:  -5px 5px 5px rgba(0, 0, 0, 0.5)
